--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,6 +7,7 @@
     "directory": "packages/api"
   },
   "license": "MIT",
+  "type": "commonjs",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
@@ -22,21 +23,20 @@
     "webhooks"
   ],
   "scripts": {
-    "build": "yarn build:js && yarn build:types",
-    "build:js": "babel src -d dist --extensions \".js,.jsx,.ts,.tsx\"",
+    "build": "tsx ./build.mts && yarn build:types",
     "build:pack": "yarn pack -o redwoodjs-api.tgz",
-    "build:types": "tsc --build --verbose",
+    "build:types": "tsc --build --verbose ./tsconfig.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
+    "check:attw": "yarn attw -P",
+    "check:package": "concurrently npm:check:attw yarn:publint",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "test": "vitest run",
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "7.25.0",
     "@prisma/client": "5.18.0",
     "@whatwg-node/fetch": "0.9.20",
     "cookie": "0.6.0",
-    "core-js": "3.38.0",
     "humanize-string": "2.1.0",
     "jsonwebtoken": "9.0.2",
     "pascalcase": "1.0.0",
@@ -44,17 +44,20 @@
     "title-case": "3.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "7.24.8",
-    "@babel/core": "^7.22.20",
+    "@arethetypeswrong/cli": "0.15.4",
+    "@redwoodjs/framework-tools": "workspace:*",
     "@types/aws-lambda": "8.10.143",
     "@types/jsonwebtoken": "9.0.6",
     "@types/memjs": "1",
     "@types/pascalcase": "1.0.3",
     "@types/split2": "4.2.3",
+    "concurrently": "8.2.2",
     "memjs": "1.3.2",
+    "publint": "0.2.10",
     "redis": "4.7.0",
     "split2": "4.2.0",
     "ts-toolbelt": "9.6.0",
+    "tsx": "4.17.0",
     "typescript": "5.5.4",
     "vitest": "2.0.5"
   },
