--- a/packages/cli-packages/storybook-vite/package.json
+++ b/packages/cli-packages/storybook-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@redwoodjs/cli-storybook-vite",
-  "version": "7.0.0",
+  "version": "8.0.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/redwoodjs/redwood.git",
@@ -22,19 +22,19 @@
     "test:unit": "vitest run"
   },
   "dependencies": {
-    "@redwoodjs/cli-helpers": "workspace:*",
-    "@redwoodjs/project-config": "workspace:*",
-    "@redwoodjs/telemetry": "workspace:*",
+    "@redwoodjs/cli-helpers": "8.0.0",
+    "@redwoodjs/project-config": "8.0.0",
+    "@redwoodjs/telemetry": "8.0.0",
     "chalk": "4.1.2",
     "execa": "5.1.1",
     "storybook": "7.6.17",
-    "storybook-framework-redwoodjs-vite": "workspace:*",
+    "storybook-framework-redwoodjs-vite": "8.0.0",
     "terminal-link": "2.1.1",
     "vitest": "2.0.5",
     "yargs": "17.7.2"
   },
   "devDependencies": {
-    "@redwoodjs/framework-tools": "workspace:*",
+    "@redwoodjs/framework-tools": "8.0.0",
     "@types/yargs": "17.0.33",
     "tsx": "4.17.0",
     "typescript": "5.5.4"
