--- a/packages/create-redwood-app/templates/js/api/jsconfig.json
+++ b/packages/create-redwood-app/templates/js/api/jsconfig.json
@@ -6,14 +6,30 @@
     "module": "Node16",
     "moduleResolution": "Node16",
     "skipLibCheck": false,
-    "rootDirs": ["./src", "../.redwood/types/mirror/api/src"],
+    "rootDirs": [
+      "./src",
+      "../.redwood/types/mirror/api/src"
+    ],
     "paths": {
-      "src/*": ["./src/*", "../.redwood/types/mirror/api/src/*"],
-      "types/*": ["./types/*", "../types/*"],
-      "@redwoodjs/testing": ["../node_modules/@redwoodjs/testing/api"]
+      "src/*": [
+        "./src/*",
+        "../.redwood/types/mirror/api/src/*"
+      ],
+      "types/*": [
+        "./types/*",
+        "../types/*"
+      ],
+      "@redwoodjs/testing": [
+        "../node_modules/@redwoodjs/testing/api"
+      ]
     },
-    "typeRoots": ["../node_modules/@types", "./node_modules/@types"],
-    "types": ["jest"],
+    "typeRoots": [
+      "../node_modules/@types",
+      "./node_modules/@types"
+    ],
+    "types": [
+      "jest"
+    ],
     "jsx": "react-jsx"
   },
   "include": [
