--- a/packages/create-redwood-app/templates/js/scripts/jsconfig.json
+++ b/packages/create-redwood-app/templates/js/scripts/jsconfig.json
@@ -6,17 +6,43 @@
     "module": "Node16",
     "moduleResolution": "Node16",
     "paths": {
-      "$api/*": ["../api/*"],
-      "api/*": ["../api/*"],
-      "$api/src/*": ["../api/src/*", "../.redwood/types/mirror/api/src/*"],
-      "api/src/*": ["../api/src/*", "../.redwood/types/mirror/api/src/*"],
-      "$web/*": ["../web/*"],
-      "web/*": ["../web/*"],
-      "$web/src/*": ["../web/src/*", "../.redwood/types/mirror/web/src/*"],
-      "web/src/*": ["../web/src/*", "../.redwood/types/mirror/web/src/*"],
-      "types/*": ["../types/*", "../web/types/*", "../api/types/*"]
+      "$api/*": [
+        "../api/*"
+      ],
+      "api/*": [
+        "../api/*"
+      ],
+      "$api/src/*": [
+        "../api/src/*",
+        "../.redwood/types/mirror/api/src/*"
+      ],
+      "api/src/*": [
+        "../api/src/*",
+        "../.redwood/types/mirror/api/src/*"
+      ],
+      "$web/*": [
+        "../web/*"
+      ],
+      "web/*": [
+        "../web/*"
+      ],
+      "$web/src/*": [
+        "../web/src/*",
+        "../.redwood/types/mirror/web/src/*"
+      ],
+      "web/src/*": [
+        "../web/src/*",
+        "../.redwood/types/mirror/web/src/*"
+      ],
+      "types/*": [
+        "../types/*",
+        "../web/types/*",
+        "../api/types/*"
+      ]
     },
-    "typeRoots": ["../node_modules/@types"],
+    "typeRoots": [
+      "../node_modules/@types"
+    ],
     "jsx": "preserve"
   },
   "include": [
