--- a/packages/auth-providers/netlify/web/package.json
+++ b/packages/auth-providers/netlify/web/package.json
@@ -57,7 +57,7 @@
     "@types/react": "^18.2.55",
     "concurrently": "8.2.2",
     "publint": "0.2.10",
-    "react": "18.3.1",
+    "react": "19.0.0-rc-8269d55d-20240802",
     "tsx": "4.17.0",
     "typescript": "5.5.4",
     "vitest": "2.0.5"
