--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -49,14 +49,14 @@
     "concurrently": "8.2.2",
     "nodemon": "3.1.4",
     "publint": "0.2.10",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0-rc-8269d55d-20240802",
+    "react-dom": "19.0.0-rc-8269d55d-20240802",
     "tsx": "4.17.0",
     "typescript": "5.5.4",
     "vitest": "2.0.5"
   },
   "peerDependencies": {
-    "react": "18.3.1"
+    "react": "19.0.0-rc-8269d55d-20240802"
   },
   "gitHead": "3905ed045508b861b495f8d5630d76c7a157d8f1"
 }
