--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -94,8 +94,8 @@
     "@redwoodjs/auth": "workspace:*",
     "@redwoodjs/server-store": "workspace:*",
     "core-js": "3.38.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "19.0.0-rc-8269d55d-20240802",
+    "react-dom": "19.0.0-rc-8269d55d-20240802"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "0.15.4",
@@ -113,8 +113,8 @@
     "vitest": "2.0.5"
   },
   "peerDependencies": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "19.0.0-rc-8269d55d-20240802",
+    "react-dom": "19.0.0-rc-8269d55d-20240802"
   },
   "gitHead": "3905ed045508b861b495f8d5630d76c7a157d8f1"
 }
