--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -67,8 +67,8 @@
   "peerDependencies": {
     "@redwoodjs/project-config": "8.0.0",
     "@redwoodjs/router": "8.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0-rc-8269d55d-20240802",
+    "react-dom": "19.0.0-rc-8269d55d-20240802",
     "storybook": "7.6.17"
   },
   "engines": {
