--- a/packages/auth-providers/firebase/web/package.json
+++ b/packages/auth-providers/firebase/web/package.json
@@ -19,8 +19,8 @@
     "build:types": "tsc --build --verbose",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx,template\" --ignore dist --exec \"yarn build\"",
     "prepublishOnly": "NODE_ENV=production yarn build",
-    "test": "jest src",
-    "test:watch": "yarn test --watch"
+    "test": "vitest run",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.25.0",
@@ -32,10 +32,9 @@
     "@babel/core": "^7.22.20",
     "@types/react": "^18.2.55",
     "firebase": "10.13.0",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
     "react": "18.3.1",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "vitest": "2.0.5"
   },
   "peerDependencies": {
     "firebase": "10.13.0"
