--- a/packages/cli/src/commands/generate/page/templates/page.tsx.template
+++ b/packages/cli/src/commands/generate/page/templates/page.tsx.template
@@ -21,11 +21,12 @@ const ${pascalName}Page = (<%- paramName === '' ? '' : `${propParam}: ${pascalNa
       <p>
         Find me in <code>${outputPath}</code>
       </p>
-      <p>
-        My default route is named <code>${camelName}</code>, link to me with `
-        <Link to={routes.${camelName}(${ argumentParam })}>${pascalName}<%= argumentParam !== '' ? ' 42' : '' %></Link>`
-      </p><% if (paramName !== '') { %>
-      <p>The parameter passed to me is {${ paramName }}</p><% } %>
+      {/*
+          My default route is named <code>${camelName}</code>, link to me with `
+          <Link to={routes.${camelName}(${ argumentParam })}>${pascalName}<%= argumentParam !== '' ? ' 42' : '' %></Link>`
+          <% if (paramName !== '') { %>
+          The parameter passed to me is {${ paramName }}<% } %>
+      */}
     </>
   )
 }
